--- a/properties_pane/entity_level/entityLevelConfig.json
+++ b/properties_pane/entity_level/entityLevelConfig.json
@@ -1,58 +1,67 @@
+/*
+* Copyright © 2016-2017 by IntegrIT S.A. dba Hackolade.  All rights reserved.
+*
+* The copyright to the computer software herein is the property of IntegrIT S.A.
+* The software may be used and/or copied only with the written permission of 
+* IntegrIT S.A. or in accordance with the terms and conditions stipulated in 
+* the agreement/contract under which the software has been supplied. 
+*
+
+In order to define custom properties for any object's properties pane, you may copy/paste from the following,
+making sure that you maintain a proper JSON format.
+
+			{
+				"propertyName": "Simple text",
+				"propertyKeyword": "simpletextProp",
+				"shouldValidate": false,
+				"propertyType": "text"
+			},
+			{
+				"propertyName": "Text area",
+				"propertyKeyword": "textareaProp",
+				"propertyValidate": false,
+				"propertyTooltip": "Popup for multi-line text entry",
+				"propertyType": "details",
+				"template": "textarea"
+			},
+			{
+				"propertyName": "Dropdown selection",
+				"propertyKeyword": "dropdownProp",
+				"shouldValidate": false,
+				"propertyTooltip": "Select from list of options",
+				"propertyType": "select",
+				"options": [
+					"Option 1",
+					"Option 2",
+					"Option 3",
+					"Option 4"
+				]
+			},
+			{
+				"propertyName": "Numeric",
+				"propertyKeyword": "numericProp",
+				"propertyValidate": true,
+				"propertyType": "text",
+				"valueType": "number"
+			},
+			{
+				"propertyName": "Checkbox",
+				"propertyKeyword": "checkboxProp",
+				"shouldValidate": false,
+				"propertyType": "checkbox"
+			}
+
+*/
 [
 	{
-		"modeName": "Details",
+		"lowerTab": "Details",
 		"structure": [
 			{
-				"fieldName": "Custom field",
-				"fieldKeyword": "customField",
+				"propertyName": "Custom property",
+				"propertyKeyword": "customproperty",
 				"shouldValidate": false,
-				"fieldType": "text",
+				"propertyType": "text",
 				"valueType": "string"
-			}
-		]
-	},
-	{
-		"modeName": "Sharding",
-		"structure": [
-			{
-				"fieldName": "Custom sharding property",
-				"fieldKeyword": "customShardingProperty",
-				"shouldValidate": false,
-				"fieldTooltip": "comments",
-				"fieldType": "details",
-				"template": "textarea",
-				"valueType": "string",
-				"changeAction": "changeShardingProperty"
-			}
-		]
-	},
-	{
-		"modeName": "Users",
-		"structure": [
-			{
-				"fieldName": "Custom user property",
-				"fieldKeyword": "customUserProperty",
-				"shouldValidate": false,
-				"fieldTooltip": "comments",
-				"fieldType": "details",
-				"template": "textarea",
-				"valueType": "string",
-				"changeAction": "changeCollectionUsersProperties"
-			}
-		]
-	},
-	{
-		"modeName": "Indexes",
-		"structure": [
-			{
-				"fieldName": "Custom index property",
-				"fieldKeyword": "customIndexProperty",
-				"shouldValidate": false,
-				"fieldTooltip": "comments",
-				"fieldType": "details",
-				"template": "textarea",
-				"valueType": "string",
-				"changeAction": "changeIndexProperty"
 			}
 		]
 	}
