--- a/properties_pane/model_level/modelLevelConfig.json
+++ b/properties_pane/model_level/modelLevelConfig.json
@@ -74,8 +74,7 @@ making sure that you maintain a proper JSON format.
 				"propertyKeyword": "customRelationshipsProperty",
 				"shouldValidate": false,
 				"propertyTooltip": "db vendor",
-				"propertyType": "text",
-				"changeAction": "changeCustomRelationshipProperty"
+				"propertyType": "text"
 			}
 		]
 	}
