--- a/properties_pane/field_level/fieldLevelConfig.json
+++ b/properties_pane/field_level/fieldLevelConfig.json
@@ -76,6 +76,22 @@ making sure that you maintain a proper JSON format.
 					"Internal"
 				]
 			}
+		],
+		"numeric": [
+			{
+				"propertyName": "Privacy-concerned",
+				"propertyKeyword": "privacyConcerned",
+				"shouldValidate": false,
+				"propertyType": "checkbox"
+			}
+		],
+		"document": [
+		],
+		"null": [
+		],
+		"array": [
+		],
+		"boolean": [
 		]
 	}
 }
